--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,227 @@
+.row {
+  width: 100%;
+}
 ul {
   display: flex;
 }
 li {
   margin: 0.5em;
+}
+a:hover {
+  text-decoration: none;
+}
+.flex-row {
+  display: flex;
+  justify-content: center;
+  margin: 0;
+}
+.hide-text {
+  font-size: 0px;
+}
+.hide-text * {
+  font-size: 0px;
+}
+.addblock {
+  display: flex;
+  justify-content: center;
+}
+.addblock img {
+  width: 100%;
+  margin: 30px;
+}
+.icon {
+  display: block;
+  width: 20px;
+  height: 20px;
+  background-image: url("../images/sprites.png");
+  background-repeat: no-repeat;
+  background-size: 200px 200px;
+}
+.contact-options li {
+  margin: 0.2em;
+}
+.facebook {
+  background-position: 0 0;
+}
+.odnoklasniki {
+  background-position: -25px 0;
+}
+.telegram {
+  background-position: -50px 0;
+}
+.twitter {
+  background-position: -75px 0;
+}
+.youtube {
+  background-position: -100px 0;
+}
+.logo {
+  display: block;
+  margin: auto;
+  width: 200px;
+  height: 50px;
+  background-image: url("../images/logo.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+.right-header-menu li a {
+  color: #959595;
+}
+.right-header-menu li a:hover {
+  color: #7a7a7a;
+}
+.right-header-menu .search-field {
+  color: #b9b9b9;
+}
+.right-header-menu .search-field:hover {
+  cursor: text;
+  color: #7a7a7a;
+}
+.right-header-menu .language-options {
+  color: #000000;
+  font-weight: 500;
+}
+.right-header-menu .language-options:hover {
+  color: #000000;
+}
+.language-options,
+.search-field {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.search-icon {
+  background-position: 0 -20px;
+  background-size: 200px 200px;
+  width: 20px;
+  height: 20px;
+  margin: 0.2em;
+}
+.globe-icon {
+  background-position: -24px -25px;
+  background-size: 225px 225px;
+}
+.dropdown-button-icon {
+  background-position: -52px -21px;
+  background-size: 225px 225px;
+}
+.navbar li a {
+  color: #020202;
+  font-weight: 500;
+  transition: ease-in-out;
+  transition-duration: 0.25s;
+}
+.navbar li a:hover {
+  color: #444444;
+}
+.navbar #navbar-list-item {
+  margin-top: 6px;
+}
+.navbar .navbar-side-menu {
+  display: flex;
+  align-items: center;
+  color: #d9d9d9;
+}
+.navbar .navbar-side-menu > span {
+  margin: 0 10px;
+  font-size: 20px;
+}
+.navbar .navbar-side-menu .icon {
+  background-size: 225px 225px;
+  width: 25px;
+  height: 25px;
+}
+.navbar .navbar-side-menu .business {
+  background-position: 2px -53px;
+}
+.navbar .navbar-side-menu .money {
+  background-position: -24px -53px;
+}
+.navbar .navbar-side-menu .daily {
+  background-position: -52px -53px;
+}
+.navbar .navbar-side-menu .live {
+  background-size: 270px 270px;
+  background-position: -95px -26px;
+}
+.navbar .navbar-side-menu a {
+  display: flex;
+  margin: 0 5px;
+  height: 20px;
+}
+.breaking-news-banner-row {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.news-alert-banner,
+.breaking-news-banner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 90px;
+  border-radius: 15px;
+  padding: 3em 2em;
+  margin: 0.7em auto;
+  margin-top: 0;
+}
+.breaking-news-banner {
+  background-color: #e50000;
+}
+.breaking-news-banner #breaking-news-text-image {
+  height: 50px;
+}
+.breaking-news-banner #breaking-news-image {
+  height: 70px;
+  margin: 1.5em;
+}
+.breaking-news-banner #breaking-news-text {
+  color: #fffdff;
+  font-size: 20px;
+  font-weight: 500;
+  letter-spacing: -0.2px;
+  margin: 1.5em;
+  margin-left: 0;
+}
+.breaking-news-banner #breaking-news-pretend-timer {
+  background-position: -109px -54px;
+  background-size: 220px 220px;
+  width: 25px;
+  height: 25px;
+}
+.news-alert-banner {
+  background-color: #f2f2f2;
+  justify-content: space-between;
+}
+.news-alert-banner #news-alert-text-image {
+  height: 50px;
+  margin-right: 32px;
+}
+.news-alert-banner #news-alert-image {
+  height: 70px;
+  margin: 1.5em;
+}
+.news-alert-banner #news-alert-text {
+  color: #000000;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 18px;
+}
+.news-alert-banner #news-alert-nav-panel {
+  display: flex;
+  margin-right: -15px;
+  margin-left: 25px;
+}
+.news-alert-banner #news-alert-left-arrow,
+.news-alert-banner #news-alert-right-arrow {
+  background-size: 220px 220px;
+  width: 15px;
+  height: 25px;
+  margin: 8px;
+  cursor: pointer;
+}
+.news-alert-banner #news-alert-left-arrow {
+  background-position: 0 -80px;
+}
+.news-alert-banner #news-alert-right-arrow {
+  background-position: -80px -80px;
 }
