--- a/css/style.less
+++ b/css/style.less
@@ -1,7 +1,311 @@
+//----------------------VARIABLES-----------------------
+
+@text-header-menu-color: #959595;
+@text-header-menu-color-hover: #7a7a7a;
+@search-text-header-menu-color: #b9b9b9;
+@lang-text-header-menu-color: #000000;
+
+@navbar-text-color: #020202;
+@navbar-text-color-hover: #444444;
+@navbar-text-weight: 500;
+
+@side-navbar-text-color: #d9d9d9;
+
+@breaking-news-panel-color: #e50000;
+@news-alert-panel-color: #f2f2f2;
+
+@breaking-news-text-color: #fffdff;
+@news-alert-text-color: #000000;
+
+//----------------------UTILITY-------------------------
+
+.row {
+  width: 100%;
+}
+
 ul {
   display: flex;
 }
 
 li {
   margin: 0.5em;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+.flex-row {
+  display: flex;
+  justify-content: center;
+  margin: 0;
+}
+
+.hide-text {
+  font-size: 0.000000001px;
+  * {
+    font-size: 0.000000001px;
+  }
+}
+
+.addblock {
+  display: flex;
+  justify-content: center;
+  img {
+    width: 100%;
+    margin: 30px;
+  }
+}
+
+.icon {
+  display: block;
+  width: 20px;
+  height: 20px;
+  background-image: url("../images/sprites.png");
+  background-repeat: no-repeat;
+  background-size: 200px 200px;
+}
+
+//----------------------HEADER-------------------------
+
+.contact-options {
+  li {
+    margin: 0.2em;
+  }
+}
+
+.facebook {
+  background-position: 0 0;
+}
+
+.odnoklasniki {
+  background-position: -25px 0;
+}
+
+.telegram {
+  background-position: -50px 0;
+}
+
+.twitter {
+  background-position: -75px 0;
+}
+
+.youtube {
+  background-position: -100px 0;
+}
+
+.logo {
+  display: block;
+  margin: auto;
+  width: 200px;
+  height: 50px;
+
+  background-image: url("../images/logo.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
+.right-header-menu {
+  li {
+    a {
+      color: @text-header-menu-color;
+      &:hover {
+        color: @text-header-menu-color-hover;
+      }
+    }
+  }
+  .search-field {
+    color: @search-text-header-menu-color;
+    &:hover {
+      cursor: text;
+      color: @text-header-menu-color-hover;
+    }
+  }
+  .language-options {
+    color: @lang-text-header-menu-color;
+    font-weight: @navbar-text-weight;
+    &:hover {
+      color: @lang-text-header-menu-color;
+    }
+  }
+}
+
+.language-options,
+.search-field {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.search-icon {
+  background-position: 0 -20px;
+  background-size: 200px 200px;
+  width: 20px;
+  height: 20px;
+  margin: 0.2em;
+}
+
+.globe-icon {
+  background-position: -24px -25px;
+  background-size: 225px 225px;
+}
+
+.dropdown-button-icon {
+  background-position: -52px -21px;
+  background-size: 225px 225px;
+}
+
+.navbar {
+  li {
+    a {
+      color: @navbar-text-color;
+      font-weight: 500;
+      transition: ease-in-out;
+      transition-duration: 0.25s;
+    }
+    a:hover {
+      color: @navbar-text-color-hover;
+    }
+  }
+
+  #navbar-list-item {
+    margin-top: 6px;
+  }
+
+  .navbar-side-menu {
+    display: flex;
+    align-items: center;
+    color: @side-navbar-text-color;
+
+    > span {
+      margin: 0 10px;
+      font-size: 20px;
+    }
+
+    .icon {
+      background-size: 225px 225px;
+      width: 25px;
+      height: 25px;
+    }
+
+    .business {
+      background-position: 2px -53px;
+    }
+
+    .money {
+      background-position: -24px -53px;
+    }
+
+    .daily {
+      background-position: -52px -53px;
+    }
+
+    .live {
+      background-size: 270px 270px;
+      background-position: -95px -26px;
+    }
+
+    a {
+      display: flex;
+      margin: 0 5px;
+      height: 20px;
+    }
+  }
+}
+
+// ----------------------BANNERS-------------------------
+
+.breaking-news-banner-row {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.news-alert-banner,
+.breaking-news-banner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  height: 90px;
+  border-radius: 15px;
+  padding: 3em 2em;
+  margin: 0.7em auto;
+  margin-top: 0;
+}
+
+.breaking-news-banner {
+  background-color: @breaking-news-panel-color;
+
+  #breaking-news-text-image {
+    height: 50px;
+  }
+
+  #breaking-news-image {
+    height: 70px;
+    margin: 1.5em;
+  }
+
+  #breaking-news-text {
+    color: @breaking-news-text-color;
+
+    font-size: 20px;
+    font-weight: 500;
+    letter-spacing: -0.2px;
+
+    margin: 1.5em;
+    margin-left: 0;
+  }
+
+  #breaking-news-pretend-timer {
+    background-position: -109px -54px;
+    background-size: 220px 220px;
+    width: 25px;
+    height: 25px;
+  }
+}
+
+.news-alert-banner {
+  background-color: @news-alert-panel-color;
+  justify-content: space-between;
+
+  #news-alert-text-image {
+    height: 50px;
+    margin-right: 32px;
+  }
+
+  #news-alert-image {
+    height: 70px;
+    margin: 1.5em;
+  }
+
+  #news-alert-text {
+    color: @news-alert-text-color;
+
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 18px;
+  }
+
+  #news-alert-nav-panel {
+    display: flex;
+    margin-right: -15px;
+    margin-left: 25px;
+  }
+
+  #news-alert-left-arrow,
+  #news-alert-right-arrow {
+    background-size: 220px 220px;
+    width: 15px;
+    height: 25px;
+    margin: 8px;
+    cursor: pointer;
+  }
+
+  #news-alert-left-arrow {
+    background-position: 0 -80px;
+  }
+
+  #news-alert-right-arrow {
+    background-position: -80px -80px;
+  }
 }
