--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,19 @@ a:hover {
   background-size: 100%;
   background-repeat: no-repeat;
 }
+.search-field {
+  border: none;
+  outline: none;
+}
+.search-field::-webkit-search-cancel-button {
+  display: none;
+}
+.right-header-menu {
+  padding-left: 3em;
+}
+.right-header-menu li {
+  display: flex;
+}
 .right-header-menu li a {
   color: #959595;
 }
@@ -79,10 +92,27 @@ a:hover {
 }
 .right-header-menu .search-field {
   color: #b9b9b9;
+  border: none;
+  outline: none;
+  width: 90px;
+  padding: 0.25em 0.5em;
+  left: -10px;
+  top: 7px;
+  position: absolute;
+  transition: 0.5s ease-in-out;
+  background-color: transparent;
+  border-radius: 0px;
+  caret-color: transparent;
 }
-.right-header-menu .search-field:hover {
-  cursor: text;
-  color: #7a7a7a;
+.right-header-menu .search-field::-webkit-search-cancel-button {
+  display: none;
+}
+.right-header-menu .search-field:focus {
+  caret-color: #b9b9b9;
+  border-radius: 20px;
+  background-color: #f6f6f6;
+  width: 110px;
+  left: -30px;
 }
 .right-header-menu .language-options {
   color: #000000;
@@ -98,11 +128,18 @@ a:hover {
   justify-content: center;
 }
 .search-icon {
+  border: none;
+  outline: none;
+  background-color: transparent;
+  z-index: 10;
   background-position: 0 -20px;
   background-size: 200px 200px;
   width: 20px;
   height: 20px;
   margin: 0.2em;
+}
+.search-icon:focus {
+  outline: none;
 }
 .globe-icon {
   background-position: -24px -25px;
@@ -284,12 +321,19 @@ footer #search-panel {
   font-weight: 400;
   margin-top: 1em;
   padding: 0.5em 1.5em;
-  padding-right: 0.5em;
+  padding-right: 2em;
   border-radius: 20px;
+}
+footer .search-box {
+  position: relative;
+  width: 250px;
 }
 footer .search-icon {
   background-size: 270px 270px;
   background-position: 0px -33px;
+  position: absolute;
+  right: 3px;
+  top: 18px;
 }
 footer .navbar {
   margin-top: 3em;
