--- a/css/style.less
+++ b/css/style.less
@@ -1,9 +1,17 @@
 //----------------------VARIABLES-----------------------
 
-@text-header-menu-color: #959595;
-@text-header-menu-color-hover: #7a7a7a;
+@text-header-menu-color: #b3b3b3;
+@text-header-menu-color-hover: #959595;
 @search-text-header-menu-color: #b9b9b9;
 @lang-text-header-menu-color: #000000;
+
+@additional-info-background-color: #00000083;
+@additional-info-panel-primary-color: #2a252e;
+@additional-info-panel-secondary-color: #f9f9f9;
+@additional-info-header-color: #000000;
+
+@meteo-highest-temp-color: #ff565e;
+@meteo-lowest-temp-color: #51b3f5;
 
 @navbar-text-color: #020202;
 @navbar-text-color-hover: #444444;
@@ -57,7 +65,7 @@ a:hover {
 }
 
 .hide-text {
-  font-size: 0.000000001px;
+  font-size: 0.000000001px !important;
   * {
     font-size: 0.000000001px;
   }
@@ -70,9 +78,16 @@ header {
 .adblock {
   display: flex;
   justify-content: center;
+
+  margin-bottom: 30px;
+
   a {
+    border-radius: 20px;
     position: relative;
+    overflow: hidden;
+    height: 285px;
   }
+
   img {
     width: 100%;
   }
@@ -82,6 +97,45 @@ header {
     background-position: -73px -48px;
     right: 35px;
     top: 17px;
+
+    cursor: pointer;
+  }
+
+  .ad-title,
+  .ad-description {
+    position: absolute;
+    color: white;
+  }
+
+  .ad-description {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    width: 535px;
+
+    font-size: 5pt;
+
+    left: 40px;
+    bottom: 15px;
+
+    font-family: Inter SemiBold;
+  }
+
+  .ad-title {
+    font-size: 19pt;
+    font-family: Inter SemiBold;
+
+    left: 40px;
+    bottom: 52px;
+  }
+
+  .mercedes-icon {
+    background-size: 250px 250px;
+    background-position: -123px -90px;
+
+    width: 35px;
+    height: 35px;
 
     cursor: pointer;
   }
@@ -99,9 +153,45 @@ header {
 //----------------------HEADER-------------------------
 
 .contact-options {
+  display: flex;
+  align-items: center;
+  margin-bottom: 0;
   li {
-    margin: 0.2em;
+    width: 25px;
+    height: 25px;
   }
+}
+
+.left-nav {
+  display: flex;
+  align-items: center;
+  .text-left-nav li {
+    margin: 0.5em;
+  }
+  li {
+    display: flex;
+    margin: 0.2em;
+    a {
+      color: @text-header-menu-color;
+      &:hover {
+        color: @text-header-menu-color-hover;
+      }
+    }
+  }
+}
+
+.text-left-nav {
+  margin: 10px;
+}
+
+.facebook,
+.odnoklasniki,
+.telegram,
+.twitter,
+.youtube {
+  background-size: 250px 250px;
+  width: 25px;
+  height: 25px;
 }
 
 .facebook {
@@ -109,24 +199,24 @@ header {
 }
 
 .odnoklasniki {
-  background-position: -25px 0;
+  background-position: -30px 0;
 }
 
 .telegram {
-  background-position: -50px 0;
+  background-position: -60px 0;
 }
 
 .twitter {
-  background-position: -75px 0;
+  background-position: -93px 0;
 }
 
 .youtube {
-  background-position: -100px 0;
+  background-position: -125px 0;
 }
 
 .logo {
   display: block;
-  margin: auto;
+  margin: 0;
   width: 200px;
   height: 50px;
 
@@ -144,30 +234,24 @@ header {
 }
 
 .right-header-menu {
-  padding-left: 3em;
-  li {
-    display: flex;
-    a {
-      color: @text-header-menu-color;
-      &:hover {
-        color: @text-header-menu-color-hover;
-      }
-    }
-  }
+  padding-left: 10em;
+  flex-direction: row-reverse;
   .search-field {
-    color: @search-text-header-menu-color;
+    display: flex;
+    position: absolute;
+    color: @navbar-text-color;
+    &::placeholder {
+      color: @search-text-header-menu-color;
+    }
     border: none;
     outline: none;
-    width: 90px;
-    padding: 0.25em 0.5em;
-    left: -10px;
-    top: 7px;
-    position: absolute;
-    transition: 0.3s ease-in-out;
-    background-color: transparent;
-    border-radius: 0px;
-
-    caret-color: transparent;
+    right: 80px;
+    z-index: 0;
+    padding: 0.3em 1em;
+    padding-right: 1.5em;
+    border-radius: 20px;
+    background-color: @search-panel-color;
+    width: 240px;
 
     &::-webkit-search-cancel-button {
       display: none;
@@ -175,13 +259,12 @@ header {
 
     &:focus {
       caret-color: @search-text-header-menu-color;
-      border-radius: 20px;
-      background-color: @search-panel-color;
-      width: 110px;
-      left: -30px;
     }
   }
   .language-options {
+    position: absolute;
+    right: 10px;
+    top: 15px;
     color: @lang-text-header-menu-color;
     font-weight: @navbar-text-weight;
     &:hover {
@@ -198,15 +281,18 @@ header {
 }
 
 .search-icon {
+  position: absolute;
   border: none;
   outline: none;
   background-color: transparent;
   z-index: 10;
-  background-position: 0 -20px;
-  background-size: 200px 200px;
-  width: 20px;
-  height: 20px;
+  background-position: 4px -27px;
+  background-size: 250px 250px;
+  width: 25px;
+  height: 25px;
   margin: 0.2em;
+  right: 80px;
+  top: 10px;
 
   &:focus {
     outline: none;
@@ -260,11 +346,13 @@ header {
       background-position: 2px -53px;
     }
 
-    .money {
+    .currency-button {
+      cursor: pointer;
       background-position: -24px -53px;
     }
 
-    .daily {
+    .weather-button {
+      cursor: pointer;
       background-position: -52px -53px;
     }
 
@@ -281,6 +369,240 @@ header {
   }
 }
 
+// ----------------------ADDITIONAL INFO-------------------------
+
+.additional-info {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  background-color: @additional-info-background-color;
+  color: white;
+
+  position: fixed;
+
+  width: 100%;
+  height: 100%;
+
+  z-index: 100;
+  top: 0;
+
+  font-family: Inter SemiBold;
+
+  .additional-info-background {
+    position: absolute;
+    z-index: 101;
+    width: 100%;
+    height: 100%;
+  }
+
+  .meteo,
+  .curs-valutar {
+    background-color: @additional-info-panel-primary-color;
+    border-radius: 10px;
+    overflow: hidden;
+    z-index: 102;
+    width: 380px;
+    height: 240px;
+    flex-shrink: 0;
+  }
+  .meteo {
+    display: none;
+    .city {
+      display: flex;
+      align-items: center;
+    }
+    .weather-icon {
+      background-size: 300px 300px;
+      width: 40px;
+      height: 40px;
+      background-position: -230px -35px;
+      margin: auto;
+    }
+    .meteo-header {
+      background-color: @additional-info-panel-secondary-color;
+      color: @additional-info-header-color;
+      font-size: 15pt;
+      padding: 1em 1em;
+      margin: 0;
+      .weather-info {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        #current-weather {
+          font-size: 10px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          line-height: 11px;
+        }
+        #current-temp {
+          font-size: 20px;
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          align-items: center;
+
+          position: absolute;
+          right: -5px;
+          top: 5px;
+        }
+      }
+    }
+
+    .meteo-content {
+      margin: 0.5em 0;
+
+      ul {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+        .lowest-temp,
+        .highest-temp {
+          line-height: 20px;
+        }
+        .highest-temp {
+          color: @meteo-highest-temp-color;
+        }
+
+        .lowest-temp {
+          color: @meteo-lowest-temp-color;
+        }
+
+        .weather-icon {
+          background-size: 250px 250px;
+          width: 40px;
+          height: 35px;
+          background-position: -230px -35px;
+          margin: 10px 0px;
+        }
+
+        #weather-1 {
+          .weather-icon {
+            background-position: -156px 1px;
+          }
+        }
+        #weather-2 {
+          .weather-icon {
+            background-position: -151px -32px;
+          }
+        }
+        #weather-3 {
+          .weather-icon {
+            background-position: -189px -29px;
+          }
+        }
+        #weather-4 {
+          .weather-icon {
+            background-position: -156px 1px;
+          }
+        }
+        #weather-5 {
+          .weather-icon {
+            background-position: -151px -32px;
+          }
+        }
+        #weather-6 {
+          .weather-icon {
+            background-position: -189px -29px;
+          }
+        }
+        #weather-7 {
+          .weather-icon {
+            background-position: -189px -29px;
+          }
+        }
+
+        li {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: space-between;
+
+          margin: 0.2em;
+          div {
+            display: flex;
+            flex-direction: row;
+          }
+        }
+      }
+    }
+  }
+
+  .curs-valutar {
+    display: none;
+
+    .curs-valutar-header {
+      background-color: @additional-info-panel-secondary-color;
+      color: @additional-info-header-color;
+      font-size: 15pt;
+      padding: 0.7em 1.5em;
+    }
+    .curs-valutar-content {
+      margin: 1em;
+      ul {
+        display: flex;
+        flex-direction: column;
+        li {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          justify-content: space-between;
+
+          margin: 0.2em;
+          margin-left: 0;
+
+          span {
+            background-size: 250px 250px;
+          }
+
+          .eur {
+            background-position: 0px -125px;
+          }
+          .usd {
+            background-position: -30px -125px;
+          }
+          .rub {
+            background-position: -61px -125px;
+          }
+          .ron {
+            background-position: -91px -125px;
+          }
+          .uah {
+            background-position: -122px -125px;
+          }
+
+          .rising,
+          .falling {
+            position: absolute;
+            left: 45.5%;
+          }
+          .rising {
+            background-position: -165px -130px;
+          }
+          .falling {
+            background-position: -196px -130px;
+          }
+
+          .currency {
+            justify-content: space-between;
+            width: 60px;
+          }
+
+          div {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            margin: 0 1em;
+          }
+        }
+      }
+    }
+  }
+}
 // ----------------------BANNERS-------------------------
 
 .breaking-news-banner-row {
@@ -460,8 +782,6 @@ footer {
 
     font-size: 14px;
     font-weight: 400;
-
-    margin-top: 1em;
 
     padding: 0.5em 1.5em;
     padding-right: 2em;
