Added links for the articles in main.html and template.html

--- a/css/style.css
+++ b/css/style.css
@@ -568,6 +568,9 @@ header {
   padding: 0;
   margin-bottom: 1em;
 }
+.small-news-unit a {
+  margin: 0;
+}
 .small-news-unit .article-title {
   font-size: 13.8px;
   line-height: 17px;
