--- a/css/style.less
+++ b/css/style.less
@@ -729,6 +729,9 @@ header {
 }
 
 .small-news-unit {
+  a {
+    margin: 0;
+  }
   .article-title {
     font-size: 13.8px;
     line-height: 17px;
